Launch custom build program on-the-fly
Addresses #150